tests/neg/operators/tags.ts
/*@ moo :: (number) => {v:string | v = "string"} */
function moo(x:number):string {
	var z :string= typeof(x);
	return z;
}
